# zxtoolbox

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  README.md  README_zh.md  mkdocs.yml  pyproject.toml  requirements.txt
doc/: computer_info.md  config_manager.md  git_branch_file.md  git_config.md  index.md  letsencrypt.md  mkdocs_manager.md  mkdocs_nav_generator.md  publish_to_pypi.md  requirements.txt  ssl_cert.md  totp.md  video_download.md
docs/: backup_manager.md  computer_info.md  config_manager.md  epub_manager.md  feishu_client.md  git_config.md  http_server.md  http_video.md  index.md  letsencrypt.md  mkdocs_manager.md  mkpdf_manager.md  nginx_manager.md
openspec/changes/project-documentation/: design.md  proposal.md  tasks.md
openspec/specs/cli-dispatch/: spec.md
openspec/specs/computer-info/: spec.md
openspec/specs/config-management/: spec.md
openspec/specs/directory-backup/: spec.md
openspec/specs/epub-conversion/: spec.md
openspec/specs/feishu-bot/: spec.md
openspec/specs/git-config/: spec.md
openspec/specs/git-pull/: spec.md
openspec/specs/http-server/: spec.md
openspec/specs/lets-encrypt/: spec.md
openspec/specs/logging/: spec.md
openspec/specs/mkdocs-management/: spec.md
src/zxtoolbox/: __init__.py  backup_manager.py  cli.py  computer_info.py  config_manager.py  epub_manager.py  feishu_client.py  git_branch_file.py  git_config.py  http_server.py  letsencrypt.py  logging_manager.py  mkdocs_manager.py  mkdocs_nav_generator.py  mkpdf_manager.py  nginx_manager.py  pyopt_2fa.py  ssl_cert.py  video_download.py
(+26 files in other folders)
