[project]
name = "zxtoolbox"
version = "0.1.0"
description = "some used tool collections"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paramiko>=3.5.1",
    "prettytable>=3.16.0",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
    "pynvml>=12.0.0",
    "pyotp>=2.9.0",
    "yt-dlp>=2025.1.0",
    "pyyaml>=6.0.0",
    "acme>=3.0.0",
    "cryptography>=42.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-smzhbook-theme>=1.1",
]

[project.scripts]
zxtool = "zxtoolbox.cli:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
